# SPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  main.cpp
docs/: INSTALL.md  MODULES.md  USAGE.md
modules/: AppArmor.cpp  AppArmor.hpp  Cleanup.cpp  Cleanup.hpp  DNS.cpp  DNS.hpp  FileIntegrity.cpp  FileIntegrity.hpp  HostsBlocker.cpp  HostsBlocker.hpp  Kernel.cpp  Kernel.hpp  Namespaces.cpp  Namespaces.hpp  Optimization.cpp  Optimization.hpp  SELinux.cpp  SELinux.hpp  SSH.cpp  SSH.hpp  SafeFile.cpp  SafeFile.hpp  State.cpp  State.hpp
